--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,53 +1,46 @@
 .container {
-  padding: 0 2rem;
+  @apply px-8;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  @apply min-h-screen flex flex-col justify-center items-center py-16;
+
   flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer {
-  display: flex;
+  @apply flex justify-center items-center py-8;
+
   flex: 1;
-  padding: 2rem 0;
   border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
+  a {
+    @apply flex justify-center items-center;
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+    flex-grow: 1;
+  }
 }
 
 .title {
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+
+  a {
+    color: #0070f3;
+    text-decoration: none;
+
+    &:hover,
+    &:focus,
+    &:active {
+      text-decoration: underline;
+    }
+  }
 }
 
 .title,
 .description {
-  text-align: center;
+  @apply text-center;
 }
 
 .description {
@@ -66,9 +59,8 @@
 }
 
 .grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @apply flex justify-center items-center;
+
   flex-wrap: wrap;
   max-width: 800px;
 }
@@ -83,24 +75,24 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
-}
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
+  &:hover,
+  &:focus,
+  &:active {
+    color: #0070f3;
+    border-color: #0070f3;
+  }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
+  h2 {
+    margin: 0 0 1rem 0;
+    font-size: 1.5rem;
+  }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  p {
+    margin: 0;
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
 }
 
 .logo {
